# imdb-sentiment-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: main.py
demo/: app.py
src/: benchmarking.py  config.py  main.py  models.py  preprocessing.py
